user hibernate search default options